--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,26 +1,35 @@
-<!DOCTYPE html>
-<html>
-     <boby>
-         <head>
-             <title>WebCampBackendNew</title>
-             <meta name="csrf-param" content="authenticity_token">
-             <meta name="csrf-token" content="ZU7K0eLjiVZgjTcAt0LguZR24M8VnCU23aclBfOD7S2f3CCClCw8xhTdCYTDLI43DHaKIc1d2cyjPzwHr1CfOg==">
-             <script src="/assets/application-114264dd93c8ff30e4335b71eed7949d66c4e7a8eb62e2de6284c046fe07104b.js" data-turbolinks-track="reload"></script>
-         </head>
+<h3>Books</h3>
+  <table>
+   <thead>
+    <tr>
+      <th>title</th>
+      <th>body</th>
+      <th></th>
+    </tr>
+   </thead>
 
-        <h1>
-          ようこそ
-          <strong>Bookers</strong>
-          へ！
-        </h1>
-        <p>
-        <strong>Bookers</strong>
-         では、さまざまな書籍に関するあなたの意見や
-        </p>
-        <p>印象を共有し交換することができます</p>
-        <p>
-            <a href = "/books">start</a>
-        </p>
-     </boby>
-     <% yield %>
- </html>
+  <tbody>
+  <% @books.each do |book| %>
+    <tr>
+      <td><%= book.title %></td>
+      <td><%= book.body %></td>
+        <%= link_to "show", book_path(book.id) %>
+        <%= link_to "edit", edit_book_path(book.id) %>
+        <%= link_to "destroy", destroy_book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %>
+    </tr>
+  <% end %>
+  </tbody>
+  </table>
+
+<h3>New book</h3>
+<%= form_with model:@book, url:'/new', local:true do |f| %>
+
+<h4>Title</h4>
+<%= f.text_field :title %>
+
+<h4>Body</h4>
+<%= f.text_area :body %>
+
+<br><%= f.submit 'Create Book' %></br>
+
+<% end %>
