--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -8,28 +8,34 @@
     </tr>
    </thead>
 
-  <tbody>
-  <% @books.each do |book| %>
-    <tr>
-      <td><%= book.title %></td>
-      <td><%= book.body %></td>
-        <%= link_to "show", book_path(book.id) %>
-        <%= link_to "edit", edit_book_path(book.id) %>
-        <%= link_to "destroy", destroy_book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %>
-    </tr>
-  <% end %>
-  </tbody>
+    <tbody>
+      <% @books.each do |book| %>
+        <tr>
+          <td><%= book.title %></td>
+          <td><%= book.body %></td>
+          <td><%= link_to "show", book_path(@book.id) %></td>
+          <td><%= link_to "edit", edit_book_path(@book) %></td>
+          <td><%= link_to "destroy", book_path(@book), method: :delete, "data-confirm" => "Are you sure?" %></td>
+        </tr>
+      <% end %>
+    </tbody>
   </table>
 
 <h3>New book</h3>
-<%= form_with model:@book, url:'/new', local:true do |f| %>
+  <% if @blog.errors.any? %>
+    <%= @blog.errors.count %> errors have occurred
+    <% @blog.errors.full_messages.each do |message| %>
+    <%= message %>
+    <% end %>
+  <% end %>
 
-<h4>Title</h4>
-<%= f.text_field :title %>
+  <%= form_with model: @book, local:true do |f| %>
 
-<h4>Body</h4>
-<%= f.text_area :body %>
+    <h4>Title</h4>
+    <%= f.text_field :title %>
 
-<br><%= f.submit 'Create Book' %></br>
+    <h4>Body</h4>
+    <%= f.text_area :body %>
 
-<% end %>
+    <br><%= f.submit 'Create Book' %></br>
+  <% end %>
