--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,12 +1,15 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <head>
-    <title>WebCampBackendNew</title>
-    <meta name="csrf-param" content="authenticity_token">
-    <meta name="csrf-token" content="02Mq/v+I2c5cNqHNZ64UtJ4/Bb+eClq981fp2iAZrYIp8cCtiUdsXihmn0kTwHo6Bj9vUUbLpkeNz/DYfMrflQ==">
-    <link rel="stylesheet" media="all" href="/assets/application-d12397cbc3a266ce5a99f7b588223090c55ca04a439953bb5f9304395de93fc3.css" data-turbolinks-track="reload">
-    <script src="/assets/application-114264dd93c8ff30e4335b71eed7949d66c4e7a8eb62e2de6284c046fe07104b.js" data-turbolinks-track="reload"></script>
-  </head>
- <body>
-</body>
+<p>
+  <strong>Title:</strong>
+  <%= book.title %>
+</p>
+
+<p>
+  <strong>Body:</strong>
+  <%= book.body %>
+</p>
+
+<a class="edit" href="/books/show/edit">Edit</a> |
+<a class="back" href="/books">Back</a>
+
+  </body>
+</html>
