--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,18 +1,21 @@
+<%= flash[:notice] %>
+<%= flash[:al] %>
+
 <h1>Editing Book</h1>
- <% if @blog.errors.any? %>
-    <%= @blog.errors.count %>errors have occurred
-    <% @blog.errors.full_messages.each do |message| %>
+ <% if @book.errors.any? %>
+    <%= @book.errors.count %>errors have occurred
+    <% @book.errors.full_messages.each do |message| %>
     <%= message %>
     <% end %>
   <% end %>
-
-<%= form_with model:@books, local: true do |f| %>
+  
+<%= form_with model:@book, local: true do |f| %>
   <h4>title</h4>
   <%= f.text_field :title %>
   <h4>body</h4>
   <%= f.text_area :body %>
   <%= f.submit 'Update Book' %>
-  
-<a class="edit" href="/books/show">Show</a> |
+
+<%= link_to "show", book_path %>
 <a class="back" href="/books">Back</a>
 <% end %>
