--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -13,22 +13,25 @@
         <tr>
           <td><%= book.title %></td>
           <td><%= book.body %></td>
-          <td><%= link_to "show", book_path(@book.id) %></td>
-          <td><%= link_to "edit", edit_book_path(@book) %></td>
-          <td><%= link_to "destroy", book_path(@book), method: :delete, "data-confirm" => "Are you sure?" %></td>
+          <td><%= link_to "show", book_path(book.id) %></td>
+          <td><%= link_to "edit", edit_book_path(book) %></td>
+          <td><%= link_to "destroy", book_path(book), method: :delete, "data-confirm" => "Are you sure?" %></td>
         </tr>
       <% end %>
     </tbody>
   </table>
 
+<%= flash[:notice] %>
+<%= flash[:alert] %>
+
 <h3>New book</h3>
-  <% if @blog.errors.any? %>
-    <%= @blog.errors.count %>errors have occurred
-    <% @blog.errors.full_messages.each do |message| %>
+  <% if @book.errors.any? %>
+    <%= @book.errors.count %>errors have occurred
+    <% @book.errors.full_messages.each do |message| %>
     <%= message %>
     <% end %>
   <% end %>
-
+ 
   <%= form_with model: @book, local:true do |f| %>
 
     <h4>Title</h4>
