--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -12,7 +12,8 @@
 </p>
 
 <%= link_to "edit", edit_book_path %>
-<a class="back" href="/books">Back</a>
+｜
+<a href="/books">Back</a>
 
   </body>
 </html>
