--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -10,9 +10,12 @@
   <h4>title</h4>
   <%= f.text_field :title %>
   <h4>body</h4>
-  <%= f.text_area :body %>
-  <%= f.submit 'Update Book' %>
+  <%= f.text_area :body %><br>
+  <br><%= f.submit 'Update Book' %></br>
+
+<br>
 
 <%= link_to "show", book_path %>
+｜
 <a class="back" href="/books">Back</a>
 <% end %>
