--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,4 @@
-<h3>Books</h3>
+<h1>Books</h1>
   <table>
    <thead>
     <tr>
@@ -20,7 +20,7 @@
     </tbody>
   </table>
 
-<h3>New book</h3>
+<h2>New book</h2>
   <% if @book.errors.any? %>
     <%= @book.errors.count %>errors have occurred
     <% @book.errors.full_messages.each do |message| %>
@@ -33,8 +33,8 @@
     <h4>Title</h4>
     <%= f.text_field :title %>
 
-    <h4>Body</h4>
+    <h4 class = "body">Body</h4>
     <%= f.text_area :body %>
-
+    <br>
     <br><%= f.submit 'Create Book' %></br>
   <% end %>
